--- a/test/Vagrantfile
+++ b/test/Vagrantfile
@@ -1,13 +1,11 @@
-Vagrant.require_plugin('vagrant-digitalocean')
-Vagrant.require_plugin('vagrant-omnibus')
-
 Vagrant.configure('2') do |config|
-  config.omnibus.chef_version = :latest
-
   config.ssh.username = 'tester'
   config.ssh.private_key_path = 'test_id_rsa'
 
-  config.vm.synced_folder '.', '/vagrant', :disabled => true
+  config.vm.synced_folder '.', '/tmp/test', type: "rsync",
+    rsync__exclude: ['cookbooks/', 'scripts/'],
+    rsync__args: ['--verbose', '--archive', '--delete', '-z', '--progress'],
+    rsync__auto: true
 
   config.vm.provider :digital_ocean do |provider, override|
     override.vm.box = 'digital_ocean'
@@ -17,11 +15,6 @@ Vagrant.configure('2') do |config|
   end
 
   config.vm.provision :shell, :path => 'scripts/provision.sh'
-
-  config.vm.provision :chef_solo do |chef|
-    chef.cookbooks_path = 'cookbooks'
-    chef.add_recipe 'test'
-  end
 
   config.vm.define :ubuntu do |ubuntu|
     ubuntu.vm.provider :digital_ocean do |provider|
@@ -37,8 +30,11 @@ Vagrant.configure('2') do |config|
   
   config.vm.define :coreos do |coreos|
     coreos.vm.provider :digital_ocean do |provider|
-      provider.image = 'coreos-alpha'
-      provider.root_username = 'core'
+      provider.image                = 'coreos-alpha'
+      provider.root_username        = 'core'
+      provider.setup                = false
+      provider.private_networking   = true
+      provider.user_data            = File.read('user-data.yml').gsub(/@SSH_PUBKEY@/,File.read('test_id_rsa.pub'))
     end
   end
 end
